fix footer alignment

--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@ hr{
     background: white;
     width:100%;
     padding-left:20px;
+    text-align:center;
 }
 
 #main-image{
